--- a/public/landing-page/scss/_navbar.scss
+++ b/public/landing-page/scss/_navbar.scss
@@ -25,11 +25,11 @@
         font-weight: 500;
         color: #111111;
         &:hover {
-          color: #ff0000;
+          color: rgb(127, 70, 206);
           transition: all 0.3s ease;
         }
         &.active {
-          color: #ff0000; 
+          color: rgb(127, 70, 206);
         }
       }
     }
